# tauri-app-spotify

./: .gitignore  .gitmodules  package-lock.json  package.json  tailwind.config.cjs
src/: App.tsx  ButtonContainer.tsx  Test.tsx  Unauthenticated.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: .env  main.rs
src/components/: MoveWindow.tsx  WindowControls.tsx
