[package]
name = "desktop-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["shell-open", "window-minimize", "window-set-always-on-top"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = {version= "0.11.14", features = ["blocking", "json"] }
dotenv = "0.15.0"
base64 = "0.21.0"
sha2 = "0.10.6"
rand = "0.8.4"
tauri-plugin-oauth = {path = "../plugins/tauri-plugin-oauth"}


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
